updated changes to site

--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="portfolio.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Momo+Trust+Display&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Personal Portfolio Website</title>
   </head>
   <body>
-    <div class="upper">
-      <h1>Coder⌨️</h1>
-      <h1>Engineer⚙️</h1>
-      <img class="personal_image" src="./assets/jojo_techportrait.png" />
-    </div>
+    <header>
+      <div class="header-left">
+        <h1>Jojo Young</h1>
+      </div>
+      <div class="header-right">
+        <h3>About me</h3>
+        <h3>Decks</h3>
+        <h3>Wheels</h3>
+        <h3>Contact</h3>
+        <div class="img-border">
+          <img width="40" height="40" src="./assets/jojo_techportrait.png" />
+        </div>
+      </div>
+    </header>
+
+    <section class="about">
+      <h1>About</h1>
+    </section>
+
+    <section class="projects"></section>
+
+    <footer class="contact"></footer>
+
+    <script src="portfolio.js"></script>
   </body>
 </html>
