Updated main image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,35 @@
     </header>
 
     <section class="about">
-      <h1>About</h1>
+      <div class="about-left">
+        <h1>ABOUT</h1>
+        <h2>
+          I’m a young graduate Electrical Engineer with over 2 years of
+          practical experience in industrial systems and automation. My journey
+          into software began with a curiosity for how technology powers
+          efficiency — leading me to learn HTML, CSS, JavaScript, and now
+          expanding into backend development.
+        </h2>
+        <h2>
+          I enjoy solving technical challenges — whether that’s wiring a control
+          panel, designing a responsive web interface, or connecting a PLC to
+          visualize data on an HMI. My goal is to blend engineering principles
+          with modern software development to build solutions that are reliable,
+          efficient, and meaningful.
+        </h2>
+      </div>
+      <div class="about-right">
+        <div class="image-container">
+          <img src="./assets/jojo_techportrait.png" />
+          <div class="background-container">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+            <div class="shape shape-5"></div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="projects"></section>
